2008-11-08  Sebastien Pouliot  <sebastien@ximian.com>

	* EngineController.cs: Fix potential (if/when a runner use multiple
	threads) race condition on raising events (self-test).

2008-11-07  Sebastien Pouliot  <sebastien@ximian.com>

	* ApplicabilityScope.cs, Confidence.cs, RuleResult.cs, 
	Severity.cs: Clearly specify [Serializable] on enums (self-test)

2008-10-29  Jesse Jones  <jesjones@mindspring.com>

	* Bitmask.cs: Added unchecked statement to Bitmask.Clear so that
	it works when compiling with checked arithmetic.

2008-10-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Bitmask.cs: Handle null correctly to avoid NRE (self-test)

2008-10-24  Sebastien Pouliot  <sebastien@ximian.com>

	* IRule.cs: Remove IRunner parameter from TearDown as it is
	not helpful (we already have it as a member) and could be confusing
	leading to bugs.
	* Rule.cs: Add a null check in Initialize (self-test). Update 
	TearDown call with API change.
	* Runner.cs: Update TearDown call with API change.
	* Symbols.cs: Add a null check in GetSource (self-test).

2008-10-17  Sebastien Pouliot  <sebastien@ximian.com>

	* Bitmask.cs: Implement IEquatable<T> (self-test).
	* EngineController.cs: Add a new event when it's time to build
	engine data from a type. Renamed existing events to match.

2008-09-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Runner.cs: Make Initialize method virtual so concrete runners
	can override it.

2008-09-06  Sebastien Pouliot  <sebastien@ximian.com>

	* Bitmask.cs: Add Intersect and IsSubsetOf methods.
	* EngineController.cs: New. Provide the main loop for engines
	to do their job.
	* Engine.cs: New. Abstract base class for engines.
	* EngineDependencyAttribute.cs: New. Attribute that the rules
	need to use to subscribe to an engine (so that the controller 
	will execute it).
	* EngineEventArgs.cs
	* HierarchicalEventArgs.cs: New. Abstract base class for both 
	EngineEventArgs and RunnerEventArgs.